formatting and accuracy relative to overlead latex

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   margin: 20;
   padding: 20;
 } */
+
+
 .imgbox {
   display: grid;
   height: 100%;
@@ -50,10 +52,16 @@ body {
 .main {
   margin-left: 160px; /* Same as the width of the sidebar */
   padding: 0px 10px;
+  font-family: 'Roboto', sans-serif;
 }
+
+/* .highlight {
+  background-color : red ;
+ }​ */
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 10px;}
 }
+
