fixed figure linking and css margins

--- a/style.css
+++ b/style.css
@@ -63,5 +63,10 @@ body {
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 10px;}
+  body {
+    padding-left: 200px;
+    padding-right: 10px;
+    text-align: justify;
+  }
 }
 
