got the palette to loade all operators. can show/hide the palette

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -31,5 +31,5 @@ body {
       Set the container's background color to the same as the scene's
       background to prevent flashing on load
     */
-    background-color: skyblue;
+    background-color: rgb(0, 0, 0);
   }
